<resources>
    <string name="app_name">Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="remainder">%</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="del">DEL</string>
    <string name="CA">CA</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tg">tg</string>
    <string name="ctg">ctg</string>
    <string name="ln">ln</string>
    <string name="lg">lg</string>
    <string name="power">^</string>
    <string name="pi">&#960;</string>
    <string name="exp">e</string>
    <string name="sqrt">&#8730;</string>
    <string name="factorial">!</string>
    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>
    <string name="to_base_mode">&gt;</string>
    <string name="to_scientific_mode">&lt;</string>
</resources>
